--- a/README
+++ b/README
@@ -1,67 +1,23 @@
-This version has been pulled out of a more extension, and includes restrictions to only allow reordering by admin and designers.
-
-= Drag Order v0.3.3 For Radiant 0.9.0
+= Drag v0.3.4 For Radiant 0.9.0
 
 Created by Bright 4, February 2009. Inspired by and based on Sean Cribbs' Reorder extension.
 
-This extension allows pages to be moved or copied to any arbitrary (valid) place in the document tree structure by 
-dragging the page to its new position and dropping it there.
-The admin UI is extended with a small drag-button for each page.
+== Notes
 
-The drag-and-drop style was inspired by the way OS-X implements this in various screens.
-
+Only designers and admins have the ability to re-order pages
 
 == Installation
 
-You can either use the automated radiant extension install, or install manually.
-
-=== Using Radiant extension install
-
-1) Install the extension using (from your project's root dir):
-   script/extension install drag_order
-
-2) Restart the server and you're ready to drag-and-drop pages.
-
-
-=== Manual install   
-
-1) Unpack/checkout/export the extension into {project root}/vendor/extensions/drag_order (note the underscore here).
-
-2) Run the extension migrations (replace {environment} by the target environment, e.g. production).
-   $ rake {environment} radiant:extensions:drag_order:migrate
-
-3) Run the extension update task.
-   $ rake {environment} radiant:extensions:drag_order:update
-
-4) Restart the server and you're ready to drag-and-drop pages.
-
-
-== Usage
-
-- Click and hold the drag-button of the page you wish to move. If the page has children and is expanded, this page will 
-collapse (because a page cannot be placed in between its descendants).
-- Drag the page to its new position. The purple bar shows the new location and indentation of the page.
-- If, while dragging, you hold the cursor above a page with collapsed children, this page will expand after one second.
-- If you want to place the page you are dragging as the child of a page which does not have any children yet, you can 
-make sure the mouse cursor is located to the right of the drag-button. The indentation of the purple bar will show the 
-page will be placed as a child when the cursor is in that position.
-- If you want to copy a page, hold down Ctrl or Command. A + icon will show up indicating this.
-- The plugin automatically adds 'copy' and, when necessary, a number to the title, slug and breadcrumb when multiple 
-copies are made.
-- If the page has been dragged to the correct location, release the mouse cursor. The admin page will reload with the 
-page at its new position.
-
-To bypass the ordering system simply supply a "by" option to the finder tags.
-
-
-== Notes
-
-- Requires Javascript
-- *** DOES NOT WORK IN (all versions of) SAFARI 2 ***
-  This is due to the fact that Radiants' own JS files do not work correctly under Safari 2
-
+    git clone git://github.com/squaretalent/radiant-drag-extension.git vendor/extensions/drag
+    
+    rake radiant:extensions:drag:migrate
+    rake radiant:extensions:drag:update
 
 == Version History
+
+# v0.3.4 - 29-03-2010
+- Moved assets to extension/drag directory
+- Updated instructions
 
 # v0.3.3 - 09-02-2010
 - Made compatible with Radiant 0.9.0
